<resources>
    <string name="app_name">Habits\' Tracker</string>
    <string name="action_settings">Settings</string>
    <string-array name="week_Days">
        <item>понедельник</item>
        <item>вторник</item>
        <item>среда</item>
        <item>четверг</item>
        <item>пятница</item>
        <item>суббота</item>
        <item>воскресенье</item>
    </string-array>
    <string-array name="week_DaysEng">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_hanit_creation">HanitCreation</string>
    <string name="end_date">Дата окончания</string>
    <string name="start_date">Дата начала</string>
    <string name="habit">Привычка</string>
    <string name="motivation">Мотивация (например: не ленись!)</string>
    <string name="remainder">Напоминание</string>
    <string name="every_day">Каждый день</string>
    <string name="save">Сохранить</string>

    <string name="сurrent_result">Текущий результат </string>
    <string name="days_for_habit">Дней\nна привычку</string>
    <string name="сurrent_success">Текущий \nуспех</string>
    <string name="days_were_done">Дней\nбыло сделано</string>
    <string name="progress">Прогресс привычки </string>
    <string name="history">История </string>

    <string name="best_habit">Лучшая привычка: </string>
    <string name="record_success">Рекордный успех: </string>
    <string name="wait">ждет начала! </string>
    <string name="zero">пока 0</string>

    <string name="quote">Человек начинает жить лишь тогда, когда ему удается \n превзойти самого себя </string>
    <string name="invitation">Начни следовать своим целям - создай новую привычку! </string>


    <string name="name">Название привычки</string>


    <!-- Strings related to Settings -->


</resources>
