<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_cup"

        style="@style/MyCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        android:layout_gravity="center"
        app:cardCornerRadius="1dp"

        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_alignTop="@+id/card_view"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewTrophy"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/trophy1" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="8dp"
                android:text="@string/best_habit"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewTrophy" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="105dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:text="@string/record_success"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/viewNameHabit"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/wait"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/imageViewTrophy" />

            <TextView
                android:id="@+id/viewDaysBest"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:text="@string/zero"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView5"
                app:layout_constraintTop_toBottomOf="@+id/viewNameHabit"
                app:layout_constraintVertical_bias="0.666" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:id="@+id/layout_recycler"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/card_view_cup"
        android:layout_marginTop="206dp"



        >
        <LinearLayout
            android:id="@+id/layout_for_empty"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation = "vertical"
            android:gravity="center"

            android:visibility="gone"
            >

            <ImageView
                android:id="@+id/imageview_for_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"


                app:srcCompat="@drawable/eishtein96" />
            <TextView
                android:id="@+id/textview_for_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="#FAC2C8CF"
                android:text="@string/quote"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:textColor="#FA95ADB8"
                android:textSize="12dp"
                android:text="@string/invitation"
                />
        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            tools:listitem="@layout/recycler_view_item" />


    </LinearLayout>

</RelativeLayout>
